# kimi-code-desktop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kimi-Code-Desktop-0.8.3-x64-setup.exe.sig  LICENSE  README.md  SECURITY.md  SHA256SUMS.txt  THIRD_PARTY_NOTICES.md  latest.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: esbuild.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/server/src/: acp-client.ts  approval-broker.ts  auth-service.ts  checkpoint-reactor.ts  config-defaults.ts  desktop-preview.ts  event-store.ts  fake-acp.ts  git-service.ts  kimi-capabilities.test.ts  kimi-capabilities.ts  kimi-usage.ts  orchestration.ts  preview-mcp.ts  runtime-ingestion.ts  server.ts  socket-origin.ts  terminal-service.ts  workspace-files.ts
apps/server/test/: acp-client.test.ts  auth-service.test.ts  checkpoint-reactor.test.ts  config-defaults.test.ts  desktop-preview.test.ts  event-store.test.ts  git-service.test.ts  (+8 more)
apps/web/: index.html  package.json  vite.config.ts
docs/: ARCHITECTURE.md  DESIGN.md  README.md  RELEASING.md  USER_GUIDE.md  acp-runtime-notes.md
docs/releases/: v0.8.3.md
scripts/: check-public-source.mjs  prepare-bundle.mjs
(+7 files in other folders)
