[package]
name = "kimi-code-desktop"
version = "0.8.3"
description = "A native desktop client for Kimi Code"
authors = ["Kimi Code Desktop contributors"]
edition = "2021"

[lib]
name = "kimi_code_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
